# task-manager-api-actix-

./: Cargo.toml  LICENSE  README.md
migrations/: 20230529120000_create_tasks_table.sql
src/: main.rs
src/handlers/: task_handlers.rs
src/middleware/: auth_middleware.rs
src/models/: task.rs
src/utils/: validation.rs
tests/: integration_tests.rs
