[package]
name = "task-manager-api-actix-"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.4.0"
dotenv = "0.17.0"
sqlx = { version = "0.5.7", features = ["runtime-tokio", "macros"] }
sqlx-core = "0.5.1"
sqlx-postgres = "0.5.0"
jsonwebtoken = "7.2.0"
bcrypt = "0.10.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.64"